--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,7 @@
     "@testing-library/jest-dom": "^5.12.0",
     "@testing-library/react": "^11.2.6",
     "@testing-library/user-event": "^12.8.3",
+    "cors": "^2.8.5",
     "firebase": "^8.4.1",
     "google-maps-react": "^2.0.6",
     "material-ui-password-field": "^2.1.2",
